# MovingAverage

./: .gitignore
EWMA/: CMakeLists.txt  Ema.h  EmaT.h  Ewma.h  EwmaT.h  Makefile  README.md  main.cpp
MA/: CMakeLists.txt  MovingAverage.cpp  MovingAverage.h  main.cpp  moving_avg.cpp
